[package]
name = "libarchive-rs"
version = "0.0.0"
edition = "2018"

[workspace]
members = ["libarchive-sys"]

[features]
static = ["libarchive-sys/static"]
vendored = ["libarchive-sys/vendored"]

[dependencies.libarchive-sys]
path = "libarchive-sys"

[[example]]
name = "list_contents"
path = "examples/list_contents.rs"
